# ifstats

./: .gitignore  Makefile  Makefile.am  README.md  configure.ac  ifstats.c  ifstats.h
man/: Makefile.am  ifstats.3
